# CSCI410_Jack_Compiler

./: .gitignore  CMakeLists.txt  README
include/: ast.hpp  compiler.hpp  error.hpp  generator.hpp  lexer.hpp  symbol.hpp  token.hpp  tokenizer.hpp
src/: compiler.cpp  generator.cpp  lexer.cpp  main.cpp  token.cpp  tokenizer.cpp
tests/Simple/: Main.jack
tests/Square/: SquareGame.jack
